# verdict

./: CMakeLists.txt  README  V_EdgeMetric.cpp  V_GaussIntegration.cpp  V_GaussIntegration.hpp  V_HexMetric.cpp  V_HexMetric.hpp  V_KnifeMetric.cpp  V_PyramidMetric.cpp  V_QuadMetric.cpp  V_TetMetric.cpp  V_TetMetric.hpp  V_TriMetric.cpp  V_WedgeMetric.cpp  VerdictConfig.cmake.in  VerdictVector.cpp  VerdictVector.hpp  v_vector.h  verdict.h  verdict.h.in  verdict_config.h.in  verdict_defines.hpp  verdict_mangle.h.in  verdict_test.cpp
docs/VerdictUserManual2007/: CMakeLists.txt  HexDiagonal.tex  HexDimension.tex  HexVolume.tex  Quad.tex  QuadSkew.tex  QuadWarpage.tex  TetDistortion.tex  TetScaledJacobian.tex  Verdict-Manual-2007.tex
unittests/: CMakeLists.txt  unittest_main.cpp  verdict.test.cpp
